# c-snippets

./: .gitignore  CMakeLists.txt  README.md  build.sh
arrays/: array_of_strings.c  indexing.c
callbacks/: cbs.c
cp-holes/: holey_file.txt  main.c  test.txt
member-functions/: main.cpp  program
memory/: memory.c
object_system/: game.c  game.h  object.c  object.h
pointers/: callbacks.c  callbacks1.c  callbacks2.c  nested_pointers.c  pointers-basics.c  pointers.c  pointers1.c  pointers2.c
structs/: struct_heap.c  struct_stack.c  structs.c
templates/: function-template.cpp
